--- a/styling.css
+++ b/styling.css
@@ -1,9 +1,78 @@
-body {
-  background-color: beige;
+@import url("https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Ubuntu&display=swap");
+
+* {
+  font-family: "Ubuntu", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-#A {
-  margin-top: 20%;
-  text-align: center;
-  color: brown;
+body {
+  background: #000;
+  min-height: 100vh;
+}
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.5s;
+  padding: 40px 100px;
+  z-index: 100000;
+}
+header .logo {
+  position: relative;
+  font-weight: 700;
+  color: #fff;
+  text-decoration: none;
+  font-size: 2em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: 0.6s;
+}
+header ul {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header ul li {
+  position: relative;
+  list-style: none;
+}
+header ul li a {
+  position: relative;
+  margin: 0 15px;
+  text-decoration: none;
+  color: #fff;
+  letter-spacing: 2px;
+  font-weight: 500px;
+  transition: 0.5s;
+}
+.banner {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: url(bg.jpg);
+  background-size: cover;
+}
+
+header.sticky {
+  padding: 5px 100px;
+  background: #fff;
+}
+header.sticky .logo,
+header.sticky ul li a {
+  color: #000;
+}
+footer {
+  position:absolute;
+  padding-left: 50%;
+  bottom: 0;
+  width:100%;
+  height: 30px;   /* Height of the footer */
+  background:rgb(255, 255, 255);
 }
