--- a/styling.css
+++ b/styling.css
@@ -9,7 +9,7 @@
 
 body {
   background: #000;
-  min-height: 100vh;
+  min-height: 150vh;
 }
 header {
   position: fixed;
@@ -47,32 +47,34 @@ header ul li a {
   position: relative;
   margin: 0 15px;
   text-decoration: none;
-  color: #fff;
+  color: rgb(255, 217, 0);
   letter-spacing: 2px;
   font-weight: 500px;
   transition: 0.5s;
 }
-.banner {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' version='1.1' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:svgjs='http://svgjs.com/svgjs' width='1440' height='2000' preserveAspectRatio='none' viewBox='0 0 1440 2000'%3e%3cg mask='url(%26quot%3b%23SvgjsMask1169%26quot%3b)' fill='none'%3e%3crect width='1440' height='2000' x='0' y='0' fill='%230e2a47'%3e%3c/rect%3e%3cpath d='M 0%2c91 C 144%2c270.6 432%2c991.4 720%2c989 C 1008%2c986.6 1296%2c261 1440%2c79L1440 2000L0 2000z' fill='%23184a7e'%3e%3c/path%3e%3cpath d='M 0%2c1627 C 144%2c1528.8 432%2c1062.6 720%2c1136 C 1008%2c1209.4 1296%2c1822.4 1440%2c1994L1440 2000L0 2000z' fill='%232264ab'%3e%3c/path%3e%3c/g%3e%3cdefs%3e%3cmask id='SvgjsMask1169'%3e%3crect width='1440' height='2000' fill='white'%3e%3c/rect%3e%3c/mask%3e%3c/defs%3e%3c/svg%3e");
-  background-size: cover;
-}
 
 header.sticky {
   padding: 5px 100px;
-  background: #fff;
+  background: rgb(143, 49, 25);
 }
 header.sticky .logo,
 header.sticky ul li a {
-  color: #000;
+  color: rgb(255, 217, 0);
 }
 footer {
-  position:absolute;
-  padding-left: 50%;
+  position: fixed;
+  padding-left: 0%;
   bottom: 0;
-  width:100%;
-  height: 30px;   /* Height of the footer */
-  background:rgb(255, 255, 255);
+  width: 100%;
+  height: 40px; /* Height of the footer */
+  background: rgba(143, 49, 25, 0);
+}
+h2{
+  padding-top: 5px;
+  padding-left: 5%;
+  position: fixed;
+  color: rgb(255, 217, 0);
+}
+.hrr{
+  border-color: rgb(255, 217, 0);
 }
