--- a/styling.css
+++ b/styling.css
@@ -1,86 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Cardo:ital@1&family=Ubuntu&display=swap");
-
-* {
-  font-family: "Ubuntu", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 body {
   background: #000;
   min-height: 150vh;
 }
 header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: 0.5s;
-  padding: 40px 100px;
-  z-index: 100000;
-}
-header .logo {
-  padding-left: 2%;
-  position: relative;
-  font-weight: 700;
-  color: #fff;
-  text-decoration: none;
-  font-size: 2em;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  transition: 0.6s;
-}
-header ul {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-header ul li {
-  position: relative;
-  list-style: none;
-}
-header ul li a {
-  position: relative;
-  margin: 0 15px;
-  text-decoration: none;
-  color: rgb(255, 217, 0);
-  letter-spacing: 2px;
-  font-weight: 500px;
-  transition: 0.5s;
-}
-
-header.sticky {
-  padding: 5px 100px;
-  background: rgb(143, 49, 25);
-}
-header.sticky .logo,
-header.sticky ul li a {
-  color: rgb(255, 217, 0);
-}
-footer {
-  position: fixed;
-  padding-left: 0%;
-  bottom: 0;
-  width: 100%;
-  height: 40px; /* Height of the footer */
-  background: rgba(143, 49, 25, 0);
-}
-h2{
-  padding-top: 5px;
-  padding-left: 5%;
-  position: fixed;
-  color: rgb(255, 217, 0);
-}
-.hrr{
-  border-color: rgb(255, 217, 0);
-}
-h1{
-  padding-top: 50%;
-  padding-left: 10%;
-  color: rgb(255, 217, 0);
+  background: #fff
 }
