--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
   font-family: "Ubuntu";
   font-style: normal;
   font-weight: 400;
-  src: url("fonts/ubuntu-v15-latin-regular.woff");
-  src: local(""), url("fonts/ubuntu-v15-latin-regular.woff2") format("woff2"), url("fonts/Ubuntu-Regular.ttf") format("truetype"), url("fonts/ubuntu-v15-latin-regular.ttf") format("truetype");
+  src: url("ubuntu-v15-latin-regular.woff");
+  src: local(""), url("ubuntu-v15-latin-regular.woff") format("woff"), url("Ubuntu-Regular.ttf") format("truetype"), url("fonts/ubuntu-v15-latin-regular.ttf") format("truetype");
 }
 
 body {
@@ -21,7 +21,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   background-color: rgb(221, 235, 243);
-  transition: 800ms;
+  transition: 500ms;
 }
 
 .header a {
