--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: "Ubuntu";
-  src: local(""), url("ubuntu-v15-latin-regular.woff") format("woff");
-  src: local(""), url("Ubuntu-Bold.ttf") format("truetype");
+  src: local(""), url("ubuntu-v15-latin-regular.woff") format("woff"), url("Ubuntu-Regular.ttf") format("truetype");
 }
 
 body {
