--- a/main.css
+++ b/main.css
@@ -4,8 +4,7 @@ body {
   padding: 0%;
   font-family: 'Courier New', Courier, monospace;
   background: rgb(221, 235, 243);
-  height: 70vw;
-  font-size: x-large;
+  font-weight: bold;
 }
 
 
@@ -15,10 +14,13 @@ body {
   width: 100%;
   padding: 0% 0%;
   background-color: rgb(221, 235, 243);
-  border-bottom-style: solid;
-  border-bottom-color: rgb(47, 96, 153);
-  border-bottom-width: 1px;
-  font-size: 0.7em;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(47, 96, 153);
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  font-size: large;
   font-weight: bold;
 }
 
@@ -39,7 +41,8 @@ body {
   transition: 200ms;
 }
 .header .headerLogo:hover {
-  color: rgb(255, 255, 255);
+  background-color: rgb(52, 90, 136);
+  color: rgb(221, 235, 243);
   transition: 200ms;
 }
 .header .headerItems:hover {
@@ -53,16 +56,43 @@ body {
 
 
 
+
+.topContent {
+  margin: 15% 0% 0% 0%;
+  padding: 5% 2% 5% 2%;
+  background-color: rgb(90, 190, 147);
+}
+.topContent p {
+  display: inline-block;
+}
+
+
+
+
 .cardsContainer {
-  margin: 20% 0%;
+  margin:  6% 0% 0% 0%;
   background-color: rgb(162, 193, 230);
+  border-width: 2px;
+  border-style: solid;
+  border-color: rgb(47, 96, 153);
+  border-left: none;
+  border-right: none;
 }
 .cardsContainer .cardTitle {
   padding: 5%;
+  font-size: xx-large;
+  font-weight: bold;
+  border-width: 2px;
+  border-style: solid;
+  border-color: rgb(47, 96, 153);
+  border-top: none;
+  border-left: none;
+  border-right: none;
 }
+
 .cardsContainer .cardData {
   padding: 5%;
 }
-.cardsContainer p{
+.cardsContainer p {
   margin: 0%;
 }
