--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,176 +1,336 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
-
-/*-- VARIABLES CSS--*/
-/*Colores*/
-:root{
-    --first-color: #E3F8FF;
-    --second-color: #DCFAFB;
-    --third-color: #FFE8DF;
-    --accent-color: #FF5151;
-    --dark-color: #161616;
+:root {
+  --first-color: linear-gradient(0deg, #0281001a 0%, #814b001a 100%);
+  --second-color: linear-gradient(0deg, #0000000f 0%, #daaf5191 100%);
+  --third-color: linear-gradient(0deg, #0000000f 0%, #00855291 100%);
+  --fourth-color: linear-gradient(0deg, #0000000f 0%, #515ada91 100%);
+  --fifth-color: linear-gradient(0deg, #0000000f 0%, #3ad59f91 100%);
+  --sixth-color: linear-gradient(0deg, #0000000f 0%, #18284891 100%);
+  --seventh-color: linear-gradient(0deg, #0000000f 0%, #3a47d591 100%);
+  --eighth-color: linear-gradient(0deg, #0000000f 0%, #3a1c7191 100%);
+  --accent-color: #ffffff;
+  --dark-color: #000000;
 }
 
-/*Tipografia responsive*/
-:root{
-    --body-font: 'Open Sans';
-    --h1-font-size: 1.5rem;
-    --h3-font-size: 1rem;
-    --normal-font-size: 0.938rem;
-    --smaller-font-size: 0.75rem;
-}
-@media screen and (min-width: 768px){
-    :root{
-        --h1-font-size: 2rem;
-        --normal-font-size: 1rem;
-        --smaller-font-size: 0.813rem;
-    }
+:root {
+  --body-font: Georgia, Arial;
+  --description-font-size: 20px;
 }
 
-/*-- BASE --*/
-*,::after,::before{
-    box-sizing: border-box;
-}
-body{
-    margin: 2rem 0 0 0;
-    background-color: #fff;
-    color: var(--dark-color);
-    font-family: var(--body-font);
-}
-h1{
-    font-size: var(--h1-font-size);
-}
-img{
-    max-width: 100%;
-    height: auto;
-}
-a{
-    text-decoration: none;
+*,
+::after,
+::before {
+  box-sizing: border-box;
+  text-decoration: none;
 }
 
-/*-- LAYAOUT --*/
+body {
+  margin: 20px 0 0 0;
+  background-color: #f1f9ff;
+  color: var(--dark-color);
+  font-family: var(--body-font);
+}
+
+body h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.BGImg img {
+  background-image: url("../img/Image\ by\ rawpixel.coma\ on\ Freepik.jpg");
+  background-size: 10%;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+}
+
+.pageHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  text-align: center;
+  flex-direction: row-reverse;
+  margin-bottom: 10%;
+}
+
+.pageHeader .pageLogo {
+  font-weight: bolder;
+  color: #000;
+}
+
+.intro {
+  background-image: linear-gradient(
+    0deg,
+    rgba(7, 35, 11, 0.99),
+    rgba(11, 65, 15, 0.7)
+  );
+  font-weight: bold;
+  text-align: center;
+  font-size: 20px;
+  padding: 10% 0 0 0;
+  text-align: start;
+  color: rgb(251, 255, 243);
+}
+
+.intro .aloevera-table-png {
+  opacity: 0.5;
+}
+
+.intro .gt {
+  font-size: 30px;
+  font-weight: bold;
+  color: #a8e4ac;
+}
+.intro p {
+  padding: 10px;
+}
+.intro .fp {
+  font-size: 30px;
+}
+.intro .sp {
+  font-size: 30px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 .main {
-    padding: 2rem 0;
-}
-.bd-grid{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    max-width: 1200px;
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
-    align-items: center;
-    gap: 2rem;
+  padding: 50px 0;
 }
 
-/*-- PAGES --*/
-.title-shop{
-    position: relative;
-    margin: 0 2.5rem;
-}
-.title-shop::after{
-    content: '';
-    position: absolute;
-    top: 50%;
-    width: 72px;
-    height: 2px;
-    background-color: var(--dark-color);
-    margin-left: .25rem;
+.bd-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  max-width: 1200px;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  align-items: center;
+  gap: 2.5rem;
 }
 
-/*-- COMPONENT --*/
-.card{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1.5rem 2rem;
-    border-radius: 1rem;
-    overflow: hidden;
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 0;
+  border-radius: 10px;
+  overflow: hidden;
+  transition: 0.3s;
 }
-article:nth-child(1){
-    background-color: var(--first-color);
+
+.imgCard {
+  position: relative;
+  border-radius: 10%;
+  transition: 0.3s;
 }
-article:nth-child(2){
-    background-color: var(--second-color);
+.imgCard img {
+  border-top-left-radius: 10%;
+  border-top-right-radius: 10%;
 }
-article:nth-child(3){
-    background-color: var(--third-color);
+
+.imgCard .cardMeta {
+  width: 100%;
+  background-color: #000;
+  border-bottom-left-radius: 10%;
 }
-article:nth-child(4){
-    background-color: var(--second-color);
+.imgCardText {
+  color: #fff;
+  border-bottom-left-radius: 10%;
 }
-.card__img{
-    width: 180px;
-    height: auto;
-    padding: 3rem 0;
-    transition: .5s;
+
+article:nth-child(1) {
+  background: var(--first-color);
 }
-.card__name{
-    position: absolute;
-    left: -25%;
-    top: 0;
-    width: 3.5rem;
-    height: 100%;
-    writing-mode: vertical-rl;
-    transform: rotate(180deg);
-    text-align: center;
-    background-color: var(--dark-color);
-    color: #fff;
-    font-weight: bold;
-    transition: .5s;
+
+article:nth-child(2) {
+  background: var(--second-color);
 }
-.card__icon{
-    font-size: 1.5rem;
-    color: var(--dark-color);
+
+article:nth-child(3) {
+  background: var(--third-color);
 }
-.card__icon:hover{
-    color: var(--accent-color);
+
+article:nth-child(4) {
+  background: var(--fourth-color);
 }
-.card__precis{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    transition: .5s;
+
+article:nth-child(5) {
+  background: var(--fifth-color);
 }
-.card__preci{
-    display: block;
-    text-align: center;
+
+article:nth-child(6) {
+  background: var(--sixth-color);
 }
-.card__preci--before{
-    font-size: var(--smaller-font-size);
-    color: var(--accent-color);
-    margin-bottom: .25rem;
+
+article:nth-child(7) {
+  background: var(--seventh-color);
 }
-.card__preci--now{
-    font-size: var(--h3-font-size);
-    font-weight: bold;
+
+article:nth-child(8) {
+  background: var(--eighth-color);
 }
-/*Move left*/
-.card:hover{
-    box-shadow: 0 .5rem 1rem #D1D9E6;
+
+article:nth-child(9) {
+  background: var(--eighth-color);
 }
-.card:hover .card__name{
-    left: 0;
+
+.card__img {
+  position: relative;
+  width: 100%;
+  height: auto;
+  padding: 50px 0;
+  transition: 0.3s;
 }
-.card:hover .card__img{
-    transform: rotate(30deg);
-    margin-left: 3.5rem;
+
+.imgCardImg {
+  position: relative;
+  width: 100%;
+  transition: 0.3s;
 }
-.card:hover .card__precis{
-    margin-left: 3.5rem;
-    padding: 0 1.5rem;
+
+.card__name {
+  position: relative;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  margin-bottom: 0;
+  transition: 0.3s;
+}
+
+.card__name h1 {
+  font-size: 30px;
+  font-weight: bolder;
+  color: #fff;
+  padding: 10px 5px;
+  margin: 0;
+}
+
+.cn {
+  width: 100%;
+  font-size: var(--description-font-size);
+  color: var(--accent-color);
+  margin: 0;
+  padding: 10px 10px;
+  background-color: rgba(0, 0, 0, 0.5);
+  transition: 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+  transition: 0.3s;
+}
+
+.card:hover .card__img {
+  transform: scale(1.2);
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.8);
+  text-align: center;
+  padding: 0 10px;
+}
+
+.footerLinks p {
+  padding: 10px;
+  color: #fff;
+}
+
+.footer .footerIcons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.footerIcons .FBIcon {
+  padding: 0 10px;
+}
+
+.footerIcons .FBIcon2 {
+  padding: 0 10px;
+}
+
+.footerIcons img {
+  width: 42px;
+}
+
+.footer .footerAboutthispage {
+  margin: 0;
+  padding: 0;
+  color: #fff;
+}
+
+.footerAboutthispage p,
+h4 {
+  display: contents;
+  color: rgb(255, 255, 255);
+}
+
+.footerAboutthispage a {
+  color: rgb(255, 255, 255);
+}
+
+.footerNotice {
+  background-color: #000000;
+  color: #fff;
+  font-size: small;
+  text-align: center;
+  border-top: 1px solid white;
+}
+
+.footerNotice p {
+  margin: 0;
 }
 
 /*-- MEDIA QUERIES --*/
-@media screen and (min-width: 1200px){
-    body{
-        margin: 3rem 0 0 0;
-    }
-    .title-shop{
-        margin: 0 5rem;
-    }
-    .bd-grid{
-        margin-left: auto;
-        margin-right: auto;
-    }
+
+@media screen and (max-width: 480px) {
+  body {
+    background-color: f1f9ff;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .pageLogo {
+    font-size: larger;
+  }
+
+  .intro {
+    font-size: 30px;
+  }
+
+  .intro .gt {
+    font-size: 45px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  body {
+    margin: 3rem 0 0 0;
+  }
+
+  .pageLogo {
+    font-size: 30px;
+  }
+
+  .intro {
+    font-size: 35px;
+  }
+
+  .intro .gt {
+    font-size: 50px;
+  }
+
+  .bd-grid {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
